--- a/misc/sidekick_skill.html
+++ b/misc/sidekick_skill.html
@@ -7,8 +7,11 @@ banner: true
 
 {% assign cardInfos = site.data.SidekickMaster | where: "levelZone", 1 %}
 
+<div class="table-scroll">
 <table class="sort-table">
+<thead>
 <tr><th data-type="string">Hero</th><th>SPD</th><th data-type="string">Active</th><th>Active VP</th><th data-type="string">Passive</th></tr>
+</thead>
 {% for c in cardInfos %}
 {% assign page = c.characterId | characterIdToPage %}
 {% assign g = c.growths[0] %}
@@ -25,3 +28,4 @@ banner: true
 </tr>
 {% endfor %}
 </table>
+</div>
