--- a/misc/stats_rank.html
+++ b/misc/stats_rank.html
@@ -7,6 +7,7 @@ banner: true
 
 {% assign cardInfos = site.data.CardMaster | where: "rarity", 5 | where_exp: "item", "item.stockId < 90000" %}
 
+<div class="table-scroll">
 <table class="sort-table">
 <tr><th data-type="string">Hero</th><th>HP</th><th>ATK</th><th>View</th><th>Speed</th></tr>
 {% for c in cardInfos %}
@@ -18,3 +19,4 @@ banner: true
 </tr>
 {% endfor %}
 </table>
+</div>
