--- a/misc/sidekick_skill100.html
+++ b/misc/sidekick_skill100.html
@@ -7,6 +7,7 @@ banner: true
 
 {% assign cardInfos = site.data.SidekickMaster | where: "levelZone", 6 %}
 
+<div class="table-scroll">
 <table class="sort-table">
 <tr><th data-type="string">Hero</th><th>SPD</th><th data-type="string">Active</th><th>Active VP</th><th data-type="string">Passive</th></tr>
 {% for c in cardInfos %}
@@ -25,3 +26,4 @@ banner: true
 </tr>
 {% endfor %}
 </table>
+</div>
