--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@ section h2 {
     text-align: center;
     font-size: 16px;
 }
+#lah_banner {
+    margin-bottom: 30px;
+}
 </style>
 
-<img width="800" height="267" src="/assets/img/lah_banner.png" style="margin-bottom: 30px" align="center" alt="Live A Hero banner">
+<img id="lah_banner" width="800" height="267" src="/assets/img/lah_banner.jpg" alt="Live A Hero banner">
 
 <table class="event-infobox">
 <tr><th><a href="/events/">Current Event</a></th></tr>
