--- a/misc/sidekick_stats100.html
+++ b/misc/sidekick_stats100.html
@@ -5,7 +5,7 @@ banner: true
 
 <p>For simplicity sake, only sidekicks stats at level 100 are listed.</p>
 
-{% assign cardInfos = site.data.SidekickMaster | where: "levelZone", 6 %}
+{% assign cardInfos = SidekickMaster | where: "levelZone", 6 %}
 
 <div class="table-scroll">
 <table class="sort-table">
