--- a/misc/sidekick_stats.html
+++ b/misc/sidekick_stats.html
@@ -5,7 +5,7 @@ banner: true
 
 <p>For simplicity sake, only sidekicks stats at level 50 are listed.</p>
 
-{% assign cardInfos = site.data.SidekickMaster | where: "levelZone", 1 %}
+{% assign cardInfos = SidekickMaster | where: "levelZone", 1 %}
 
 <div class="table-scroll">
 <table class="sort-table">
