--- a/misc/stats_rank6.html
+++ b/misc/stats_rank6.html
@@ -5,7 +5,7 @@ banner: true
 
 <p>For simplicity sake, only 6 star heroes are ranked here.</p>
 
-{% assign cardInfos = site.data.CardMaster | where: "rarity", 6 %}
+{% assign cardInfos = CardMaster | where: "rarity", 6 %}
 
 <div class="table-scroll">
 <table class="sort-table">
