--- a/illustrators.html
+++ b/illustrators.html
@@ -3,10 +3,10 @@ title: Illustrator
 banner: true
 ---
 
-{% assign heroes = site.data.CardMaster | where: "stockOrder", 1 | where_exp: "item", "item.stockId < 90000" %}
-{% assign sidekicks = site.data.SidekickMaster | where: "levelZone", 1 %}
+{% assign heroes = CardMaster | where: "stockOrder", 1 | where_exp: "item", "item.stockId < 90000" %}
+{% assign sidekicks = SidekickMaster | where: "levelZone", 1 %}
 
-{% assign groups = heroes | concat: sidekicks | processCharaGroup: "illustrator", site.data.wiki.Illustrator | sort: "en" %}
+{% assign groups = heroes | concat: sidekicks | processCharaGroup: "illustrator", wiki.Illustrator | sort: "en" %}
 
 <ul id="markdown-toc">
 {% for human in groups %}
