Toggle button to hide unmarked unit

--- a/charas.html
+++ b/charas.html
@@ -9,7 +9,10 @@ additional_scripts: ["/assets/chara.js"]
 
 <h2>Released units</h2>
 
+<div class="">
 <button id="collection-btn">Activate Collection Mode</button>
+<button id="toggle-hide-btn">Toggle Non-highlighted Cards</button>
+</div>
 
 <h3 id="heroes">Heroes</h3>
 
