Add jp description to sidekick skill 100 misc page

--- a/misc/sidekick_skill100.html
+++ b/misc/sidekick_skill100.html
@@ -20,9 +20,9 @@ banner: true
 {% assign passive = c.equipmentSkills | last | downcase %}
 {% assign active_skill = site.data.SkillMaster[active] %}
 {% assign passive_skill = site.data.SkillMaster[passive] %}
-<td>{% include skill-description.html skill=active_skill %}</td>
+<td title="{{ active_skill.description }}">{% include skill-description.html skill=active_skill %}</td>
 <td>{{ active_skill.useView }}</td>
-<td>{% include skill-description.html skill=passive_skill %}</td>
+<td title="{{ passive_skill.description }}">{% include skill-description.html skill=passive_skill %}</td>
 </tr>
 {% endfor %}
 </table>
