Wider content area for some pages

--- a/misc/sidekick_skill.html
+++ b/misc/sidekick_skill.html
@@ -1,6 +1,7 @@
 ---
 title: Sidekick Skill List
 banner: true
+wide_content: true
 ---
 
 <p>For simplicity sake, only active and passive skills at level 50 are listed.</p>
