--- a/misc/sidekick_skill100.html
+++ b/misc/sidekick_skill100.html
@@ -1,6 +1,7 @@
 ---
 title: Sidekick Skill List 100
 banner: true
+wide_content: true
 ---
 
 <p>For simplicity sake, only active and passive skills at level 100 are listed.</p>
