--- a/misc/sidekick_stats.html
+++ b/misc/sidekick_stats.html
@@ -1,6 +1,7 @@
 ---
 title: Basic Stats Sidekick Ranking
 banner: true
+wide_content: true
 ---
 
 <p>For simplicity sake, only sidekicks stats at level 50 are listed.</p>
