--- a/misc/stats_rank.html
+++ b/misc/stats_rank.html
@@ -1,6 +1,7 @@
 ---
 title: Basic Stats Hero Ranking
 banner: true
+wide_content: true
 ---
 
 <p>For simplicity sake, only 5 star heroes are ranked here.</p>
