--- a/misc/stats_rank6.html
+++ b/misc/stats_rank6.html
@@ -1,6 +1,7 @@
 ---
 title: Basic Stats Hero Ranking (Level 60)
 banner: true
+wide_content: true
 ---
 
 <p>For simplicity sake, only 6 star heroes are ranked here.</p>
