--- a/misc/sidekick_stats100.html
+++ b/misc/sidekick_stats100.html
@@ -1,6 +1,7 @@
 ---
 title: Basic Stats Sidekick Ranking 100
 banner: true
+wide_content: true
 ---
 
 <p>For simplicity sake, only sidekicks stats at level 100 are listed.</p>
