--- a/misc/stats_rank.html
+++ b/misc/stats_rank.html
@@ -15,7 +15,7 @@ wide_content: true
 {% assign page = c.characterId | characterIdToPage %}
 {% assign g = c.growths[3] %}
 <tr>
-<td><a class="item" href="{{ page.url }}/#h{{ c.stockId }}-stats"><img src="/cdn/Sprite/icon_{{ c.resourceName }}_{% if c.stockOrder >= 5 %}h01{% else %}h02{% endif %}.png" loading="lazy"> {{ page.title }}</a></td>
+<td><a class="item" href="{{ page.url }}#h{{ c.stockId }}"><img src="/cdn/Sprite/icon_{{ c.resourceName }}_{% if c.stockOrder >= 5 %}h01{% else %}h02{% endif %}.png" loading="lazy"> {{ page.title }}</a></td>
 <td>{% include hero-role.html role=c.role %}</td>
 <td>{{ g.hp }}</td><td>{{ g.attack }}</td><td>{{ g.addView }}</td><td>{{ g.agility }}</td>
 </tr>
