--- a/misc/role.html
+++ b/misc/role.html
@@ -10,14 +10,18 @@ banner: true
 <ul id="markdown-toc">
 {% for human in groups %}
 {% assign role = human.name | plus: 0 %}
-<li><a href="#{% include hero-role.html role=role %}">{% include hero-role.html role=role %}</a></li>
+{% capture role_s %}{% include hero-role.html role=role %}{% endcapture %}
+{% assign role_s = role_s | strip %}
+<li><a href="#{{ role_s | slugify }}">{{ role_s }}</a></li>
 {% endfor %}
 </ul>
 
 {% for human in groups %}
 
 {% assign role = human.name | plus: 0 %}
-<h3 id="{% include hero-role.html role=role %}">{% include hero-role.html role=role %}</h3>
+{% capture role_s %}{% include hero-role.html role=role %}{% endcapture %}
+{% assign role_s = role_s | strip %}
+<h3 id="{{ role_s | slugify }}">{{ role_s }}</h3>
 
 <ul class="card-list">
 {% for item in human.items %}
