--- a/misc/sidekick_skill.html
+++ b/misc/sidekick_skill.html
@@ -9,7 +9,7 @@ wide_content: true
 {% assign cardInfos = site.data.SidekickMaster | where: "levelZone", 1 %}
 
 <div class="table-scroll">
-<table class="sort-table">
+<table class="sort-table bordered">
 <tr><th data-type="string">Hero</th><th>SPD</th><th data-type="string">Active</th><th>Active VP</th><th data-type="string">Passive</th></tr>
 {% for c in cardInfos %}
 {% assign page = c.characterId | characterIdToPage %}
