--- a/charas.html
+++ b/charas.html
@@ -25,7 +25,7 @@ additional_scripts: ["/assets/chara.js"]
 <p><button id="collection-btn">Activate Collection Mode</button>
 </p>
 
-<fieldset class="filter-radio-group" name="collection-filter">
+<fieldset id="collection-radio-group" name="collection-filter">
 <legend>Display</legend>
 <label><input type="radio" name="collection-filter" value="0" checked>All</label>
 <label><input type="radio" name="collection-filter" value="1">Selected only</label>
