--- a/survey/2025.html
+++ b/survey/2025.html
@@ -6,7 +6,6 @@ additional_styles:
   - https://unpkg.com/survey-core@2.3.4/survey-core.min.css
   - https://rongjie-survey-platform.netlify.app/static/shared.css
 additional_scripts:
-  - https://rongjie-survey-platform.netlify.app/lah-2025.js
   - https://captcha.gurl.eu.org/cap.min.js
 ---
 {% include header.html %}
@@ -30,4 +29,5 @@ additional_scripts:
     </aside>
 </div>
 </main>
+<script defer src="https://rongjie-survey-platform.netlify.app/lah-2025.js"></script>
 {% include footer.html %}
