--- a/survey/2025.html
+++ b/survey/2025.html
@@ -23,6 +23,7 @@ additional_scripts:
   padding: 5px;
 }
 </style>
+<div class="content__wider">
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
         <span aria-hidden="true"><svg height="16" viewBox="0 0 12 16" width="12" xmlns="http://www.w3.org/2000/svg"><path d="m11.41 9h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm0-4h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm-10.82 6h10.81c.59 0 .59.41.59 1s0 1-.59 1h-10.81c-.59 0-.59-.41-.59-1s0-1 .59-1z"/></svg></span>
@@ -31,6 +32,7 @@ additional_scripts:
     <a class="github-button" href="{{ site.github_repo }}/blob/master/{{ page.path }}?plain=1">View source</a>
     </aside>
     <div id="surveyContainer"></div>
+</div>
 </main>
 <script defer src="https://rongjie-survey-platform.netlify.app/lah-2025.js"></script>
 {% include footer.html %}
