--- a/survey/2025.html
+++ b/survey/2025.html
@@ -21,6 +21,23 @@ additional_scripts:
   z-index: 1000;
   padding: 5px;
 }
+.load-spinner {
+  width: 100px;
+  height: 100px;
+  border: 8px solid #FFF;
+  border-bottom-color: #FF3D00;
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 </style>
 <div class="content__wider">
     <aside class="toolbar clearfix">
@@ -32,6 +49,7 @@ additional_scripts:
     </aside>
     <div id="surveyContainer">
       <h1>Loading...</h1>
+      <div class="load-spinner"></div>
     </div>
 </div>
 </main>
