--- a/survey/2025.html
+++ b/survey/2025.html
@@ -13,6 +13,7 @@ additional_scripts:
 <style>
 #surveyContainer {
   position: relative;
+  margin: 0 -40px;
 }
 #languageSelect {
   position: absolute;
