--- a/survey/2025.html
+++ b/survey/2025.html
@@ -57,7 +57,7 @@ additional_scripts:
       <div class="loading-area">
       <h1>Loading...</h1>
       <div class="load-spinner"></div>
-      </div>>
+      </div>
     </div>
 </div>
 </main>
