--- a/misc/chara_category.html
+++ b/misc/chara_category.html
@@ -3,7 +3,15 @@ title: Character category
 banner: true
 ---
 
-<table>
+<style>
+.chara-category a {
+  display: inline-block;
+  margin: 2px 5px;
+  width: 100px;
+}
+</style>
+
+<table class="chara-category">
 <tr><th>Gender \ Type</th><th>Humanoid</th><th>Anthro</th><th>Other</th></tr>
 <tr>
     <td>Male</td>
@@ -11,21 +19,21 @@ banner: true
     {% assign temp = site.charas | where: "type", "humanoid" | where: "gender", "male" %}
     <p>Total: {{ temp.size | default: 0 }}</p>
     {% for chara in temp %}
-        <a href="{{ chara.url }}">{{ chara.title }}</a>
+        <a class="item" href="{{ chara.url }}"><img src="{{ page | charaPageToIcon }}" loading="lazy" widt="32" height="32"> {{ chara.title }}</a>
     {% endfor %}
     </td>
     <td>
     {% assign temp = site.charas | where: "type", "anthro" | where: "gender", "male" %}
     <p>Total: {{ temp.size | default: 0 }}</p>
     {% for chara in temp %}
-        <a href="{{ chara.url }}">{{ chara.title }}</a>
+        <a class="item" href="{{ chara.url }}"><img src="{{ page | charaPageToIcon }}" loading="lazy" widt="32" height="32"> {{ chara.title }}</a>
     {% endfor %}
     </td>
     <td>
     {% assign temp = site.charas | where: "type", "other" | where: "gender", "male" %}
     <p>Total: {{ temp.size | default: 0 }}</p>
     {% for chara in temp %}
-        <a href="{{ chara.url }}">{{ chara.title }}</a>
+        <a class="item" href="{{ chara.url }}"><img src="{{ page | charaPageToIcon }}" loading="lazy" widt="32" height="32"> {{ chara.title }}</a>
     {% endfor %}
     </td>
 </tr>
@@ -35,21 +43,21 @@ banner: true
     {% assign temp = site.charas | where: "type", "humanoid" | where: "gender", "female" %}
     <p>Total: {{ temp.size | default: 0 }}</p>
     {% for chara in temp %}
-        <a href="{{ chara.url }}">{{ chara.title }}</a>
+        <a class="item" href="{{ chara.url }}"><img src="{{ page | charaPageToIcon }}" loading="lazy" widt="32" height="32"> {{ chara.title }}</a>
     {% endfor %}
     </td>
     <td>
     {% assign temp = site.charas | where: "type", "anthro" | where: "gender", "female" %}
     <p>Total: {{ temp.size | default: 0 }}</p>
     {% for chara in temp %}
-        <a href="{{ chara.url }}">{{ chara.title }}</a>
+        <a class="item" href="{{ chara.url }}"><img src="{{ page | charaPageToIcon }}" loading="lazy" widt="32" height="32"> {{ chara.title }}</a>
     {% endfor %}
     </td>
     <td>
     {% assign temp = site.charas | where: "type", "other" | where: "gender", "female" %}
     <p>Total: {{ temp.size | default: 0 }}</p>
     {% for chara in temp %}
-        <a href="{{ chara.url }}">{{ chara.title }}</a>
+        <a class="item" href="{{ chara.url }}"><img src="{{ page | charaPageToIcon }}" loading="lazy" widt="32" height="32"> {{ chara.title }}</a>
     {% endfor %}
     </td>
 </tr>
@@ -59,21 +67,21 @@ banner: true
     {% assign temp = site.charas | where: "type", "humanoid" | where: "gender", "other" %}
     <p>Total: {{ temp.size | default: 0 }}</p>
     {% for chara in temp %}
-        <a href="{{ chara.url }}">{{ chara.title }}</a>
+        <a class="item" href="{{ chara.url }}"><img src="{{ page | charaPageToIcon }}" loading="lazy" widt="32" height="32"> {{ chara.title }}</a>
     {% endfor %}
     </td>
     <td>
     {% assign temp = site.charas | where: "type", "anthro" | where: "gender", "other" %}
     <p>Total: {{ temp.size | default: 0 }}</p>
     {% for chara in temp %}
-        <a href="{{ chara.url }}">{{ chara.title }}</a>
+        <a class="item" href="{{ chara.url }}"><img src="{{ page | charaPageToIcon }}" loading="lazy" widt="32" height="32"> {{ chara.title }}</a>
     {% endfor %}
     </td>
     <td>
     {% assign temp = site.charas | where: "type", "other" | where: "gender", "other" %}
     <p>Total: {{ temp.size | default: 0 }}</p>
     {% for chara in temp %}
-        <a href="{{ chara.url }}">{{ chara.title }}</a>
+        <a class="item" href="{{ chara.url }}"><img src="{{ page | charaPageToIcon }}" loading="lazy" widt="32" height="32"> {{ chara.title }}</a>
     {% endfor %}
     </td>
 </tr>
