--- a/misc/sidekick_stats.html
+++ b/misc/sidekick_stats.html
@@ -8,8 +8,7 @@ wide_content: true
 
 {% assign cardInfos = site.data.SidekickMaster | where: "levelZone", 1 %}
 
-<div class="table-scroll">
-<table class="sort-table bordered">
+<table class="sticky-header sort-table bordered">
 <tr><th data-type="string">Sidekick</th><th>HP</th><th>ATK</th><th>View</th><th>Speed</th></tr>
 {% for c in cardInfos %}
 {% assign page = c.characterId | characterIdToPage %}
@@ -20,4 +19,3 @@ wide_content: true
 </tr>
 {% endfor %}
 </table>
-</div>
